test/cli/test-cel-http/resources.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-pass
  namespace: default
  labels:
    app: approved-app
spec:
  containers:
  - name: nginx
    image: nginx:1.21
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-fail
  namespace: default
  labels:
    app: rejected-app
spec:
  containers:
  - name: nginx
    image: nginx:1.21
    ports:
    - containerPort: 80
